# scrap_walmart

./: .gitignore  COMMIT_HISTORY.md  LICENSE  Makefile  README.md  TEST_RESULTS.md  main.py  pyproject.toml  requirements.txt  scraper_logic.py  todo
chrome_extension/: background.js  content.js
chrome_walmart_seller_btn/: background.js  content.js  manifest.json
main_output/csv/: products_102616245_20250704_002115.csv  products_51e3ca3f-f8cb-4cbb-85ec-239b38d2cc1f.csv  products_a5686de8-122f-4f6d-b844-c22ea5589df5.csv
output/: 010314ed-212e-406e-9819-98f9ed8b4910.csv  0419e9c6-7c18-4375-ba79-7a2af63a6702.csv  0b4f04c1-fab2-4cb4-aecb-d91211e3bd8b.csv  5cf138e2-7e64-4588-9d61-6a7c55a81336.csv  7aebcb71-7399-491c-a580-3a54c0d8a8c9.csv  83758c8c-766e-4228-b5a5-b12798f90b2c.csv  87897828-1b30-47e9-ae0a-10be168350ba.csv  a1a87911-caf5-4fa9-880c-97a2ed74c535.csv  ad2f7b09-77eb-4efc-b405-b6ad5cbca234.csv  d20a1c00-f0d8-425c-a568-f0b9171db870.csv  d8b5b117-6ebe-4623-a707-8a1d7b863a2b.csv  de6fe511-c5f6-4e7c-8446-47da64db54fe.csv  f26490f6-15ec-4d89-b430-fbd2260e774b.csv  f2ee33a6-edd0-4950-a275-7d5c3b3a7499.csv  walmart_seller_shopall?povid=LFNav_Landing%20Page_sellerpage_cat_pill_shopall_1750962156.csv
output_csvs/: walmart_seller_102616245_1750963766.csv
project1/: .env.example  debug_page.html  main.py
project2/chrome_e_walmart/: background.js  content.js  manifest.json  popup.html  popup.js
project3/: app.py
project3/walmart-scraper-extension/: manifest.json  popup.html  popup.js
py_server_to_scrap_walmart/: main copy.py  main.py  scraper_logic.py
py_server_to_scrap_walmart/chrome_walmart_seller_btn/: manifest.json  style.css
python_scraper_api/: README.md  debug_scraper.py  main.py
rust_scrap_walmart/: Cargo.toml  output.html  products.csv
rust_scrapwal/: Cargo.toml
rust_scrapwal/src/: lib.rs
scarper_walmart/: Cargo.toml  products.csv  products_optimized.csv
scarper_walmart/src/: lib.rs  main.rs
