[package]
name = "rust_scrapwal"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1.8.0", features = ["v4"] }

reqwest = { version = "0.12.22", features = ["blocking"] }
scraper = "0.23.1"
tokio = { version = "1.46.0", features = ["full"] } # הוספנו את tokio
csv = "1.3"
chrono="0.4.41"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"

# rust within python
pyo3 = { version = "0.25", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.25", features = ["tokio-runtime"] }
regex = "1.11.1"

[profile.release]
lto = true             # Link-Time Optimization
codegen-units = 1      # Maximize optimizations across crates
panic = "abort"        # Switch from unwinding to aborting on panic
strip = true           # Strip symbols from the binary
opt-level = 3          # Standard optimization level for speed

[lib]
name = "rust_scrapwal"
crate-type = ["cdylib"] # חשוב מאוד: זה מגדיר את הפרויקט כספרייה דינמית
