[package]
name = "rust_scrapwal"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.8.0", features = ["v4"] }
reqwest = { version = "0.12.22", features = ["blocking"] }
scraper = "0.23.1"
tokio = { version = "1.46.0", features = ["full"] }
csv = "1.3"
chrono = "0.4.41"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
rayon = "1.8.0"
pyo3 = { version = "0.25", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.25", features = ["tokio-runtime"] }
regex = "1.11.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[lib]
name = "rust_scrapwal"
crate-type = ["cdylib"]
