[package]
name = "scarper_walmart"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1.8.0", features = ["v4"] }

reqwest = { version = "0.12", features = ["blocking"] }
scraper = "0.23.1"
tokio = { version = "1", features = ["full"] } # הוספנו את tokio
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"

# rust within python
pyo3 = { version = "0.25", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.25", features = ["tokio-runtime"] }

[profile.release]
lto = true             # Link-Time Optimization
codegen-units = 1      # Maximize optimizations across crates
panic = "abort"        # Switch from unwinding to aborting on panic
strip = true           # Strip symbols from the binary
opt-level = 3          # Standard optimization level for speed

[lib]
name = "scarper_walmart"
crate-type = ["cdylib"] # חשוב מאוד: זה מגדיר את הפרויקט כספרייה דינמית
